--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <h3>Image Examples</h3>
   <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"><h4>HTM5</h4></a>
   <img src="https://github.com/robgmerrill/img/blob/master/css3-logo.png?raw=true" alt="CSS logo">
-  <img src="/images/html5-logo.png" alt="HTML5 logo">
+  <img src="/Images/html5-logo.png" alt="HTML5 logo">
 
   <a href="linkedPage.html"><h3>Linked Page Demo</h3></a>
 
